force-app/main/default/objects/ESS_Manpower__c.object
<CustomObject>
    <fields>
        <fullName>Approval_History_JSON__c</fullName>
        <label>Approval History JSON</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Project_Manager_Id__c</fullName>
        <label>Approver Project Manager Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Section_Head_Id__c</fullName>
        <label>Approver Section Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_VP_Id__c</fullName>
        <label>Approver VP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_By_Id__c</fullName>
        <label>Cancelled By Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_JSON__c</fullName>
        <label>Current Status JSON</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Commencement__c</fullName>
        <label>Date of Commencement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G_L_Account__c</fullName>
        <label>G/L Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Order_WBS__c</fullName>
        <label>Internal Order/WBS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Admin_PEOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin PEOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PRTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PRTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JE_Score__c</fullName>
        <label>JE Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Detail__c</fullName>
        <label>Job Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Contractor_required__c</fullName>
        <label>No. of Contractor required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ReplaceOldPosition</fullName>
                    <label>ทดแทนตำแหน่งงานเดิม</label>
                </value>
                <value>
                    <fullName>AddOldPosition</fullName>
                    <label>เพิ่มในตำแหน่งงานเดิม</label>
                </value>
                <value>
                    <fullName>AddNewPosition</fullName>
                    <label>เพิ่มในตำแหน่งใหม่</label>
                </value>
                <value>
                    <fullName>KHReview</fullName>
                    <label>เปลี่ยนแปลงขอบข่ายงาน (KH Review)</label>
                </value>
                <value>
                    <fullName>ExtendFirstContract</fullName>
                    <label>ต่อสัญญาครั้งที่ 1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Department__c</fullName>
        <label>On Behalf Of Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Email__c</fullName>
        <label>On Behalf Of Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Employee_Id__c</fullName>
        <label>On Behalf Of Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Of Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Function__c</fullName>
        <label>On Behalf Of Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Id__c</fullName>
        <label>On Behalf Of Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Position__c</fullName>
        <label>On Behalf Of Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Section__c</fullName>
        <label>On Behalf Of Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Unit__c</fullName>
        <label>On Behalf Of Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <label>On Behalf Of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Required__c</fullName>
        <label>Output Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Requirement__c</fullName>
        <label>Physical Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Approved_Date__c</fullName>
        <label>Project Manager Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Manager Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Id__c</fullName>
        <label>Project Manager Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Section_Head_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Manager Section Head Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Document_No__c</fullName>
        <label>Reference Document No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Department__c</fullName>
        <label>Requester Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Employee_Id__c</fullName>
        <label>Requester Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Function__c</fullName>
        <label>Requester Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Id__c</fullName>
        <label>Requester Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Position__c</fullName>
        <label>Requester Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Section__c</fullName>
        <label>Requester Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Mobile__c</fullName>
        <label>Requester Tel Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Office__c</fullName>
        <label>Requester Tel Office</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Unit__c</fullName>
        <label>Requester Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_of_Service_ID__c</fullName>
        <label>Scope of Service ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Approved_Date__c</fullName>
        <label>Section Head Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_Head_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section Head Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Head_Id__c</fullName>
        <label>Section Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head__c</fullName>
        <label>Section Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_For__c</fullName>
        <label>Service For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                </value>
                <value>
                    <fullName>TES</fullName>
                </value>
                <value>
                    <fullName>TLB</fullName>
                </value>
                <value>
                    <fullName>TPX</fullName>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>TET</fullName>
                </value>
                <value>
                    <fullName>TOP SPP</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>TTC</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                    <isActive>false</isActive>
                    <label>TS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>WaitingToEmployee</fullName>
                    <label>Waiting to Employee</label>
                </value>
                <value>
                    <fullName>WaitingToEmployeeApproved</fullName>
                    <label>Waiting to Employee Approved</label>
                </value>
                <value>
                    <fullName>Waiting to VPApproved</fullName>
                    <label>Waiting to VP Approved</label>
                </value>
                <value>
                    <fullName>WaitingToSectionHead</fullName>
                    <label>Waiting to Section Head</label>
                </value>
                <value>
                    <fullName>WaitingToVP</fullName>
                    <label>Waiting to VP</label>
                </value>
                <value>
                    <fullName>WaitingToProjectManager</fullName>
                    <label>Waiting to Project Manager</label>
                </value>
                <value>
                    <fullName>WaitingToAcknowledge</fullName>
                    <label>Waiting to Acknowledge</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>WaitingToEmployeeRevise</fullName>
                    <label>Waiting to Employee Revise</label>
                </value>
                <value>
                    <fullName>WaitingToSectionHeadRevise</fullName>
                    <label>Waiting to Section Head Revise</label>
                </value>
                <value>
                    <fullName>WaitingToVPRevise</fullName>
                    <label>Waiting to VP Revise</label>
                </value>
                <value>
                    <fullName>WaitingToAdminEmployeeRevise</fullName>
                    <label>Waiting to Admin Employee Revise</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Service__c</fullName>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>ProjectBase</fullName>
                    <label>Project Base</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Approved_Date__c</fullName>
        <label>VP Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Id__c</fullName>
        <label>VP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <label>VP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangkok</fullName>
                    <label>กรุงเทพ</label>
                </value>
                <value>
                    <fullName>Sriracha</fullName>
                    <label>ศรีราชา</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workflow_Type__c</fullName>
        <label>Workflow Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Day__c</fullName>
        <label>Working Day</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(Year(DATEVALUE(CreatedDate)))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNew</label>
        <type>Checkbox</type>
    </fields>
    <label>ESS Manpower</label>
    <nameField>
        <displayFormat>MAN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>